public/global.css
/* ... */
.card-img {
  display: block;
  border-radius: 12px;
  text-align: center;
  width: 100%;
}

.card-inner {
  border-radius: 12px;
  background-image: repeating-linear-gradient(-55deg, #ddd, #ddd 5px, #ccc 5px, #ccc 10px);
  color: black;
  font-weight: 500;
  text-align: center;
  transition:
    transform 600ms,
    -webkit-transform 600ms;
  transform-style: preserve-3d;
  width: 100%;
  position: relative;
  -webkit-transform-style: preserve-3d;
}

.card-inner-flipped {
  transform: rotateY(180deg);
}

.card-img-front,
.card-img-back {
  backface-visibility: hidden;
  transform-style: preserve-3d;
  position: relative;
  width: 100%;
  -webkit-backface-visibility: hidden;
  -webkit-transform-style: preserve-3d;
}

.card-img-back {
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
}

/* Only for cards that have both front and back (flip cards) */
.card-inner:has(.card-img-back) {
  position: relative;
}

.card-inner:has(.card-img-back) .card-img-front,
.card-inner:has(.card-img-back) .card-img-back {
  position: absolute;
}

.card-id {
  align-items: center;
  background-color: white;
  border-radius: 100%;
  display: flex;
  font-weight: 600;
  font-size: 10px;
  justify-content: center;
  opacity: 0.7;
  position: absolute;
  top: 8px;
  left: 4px;
  height: 20px;
  width: 20px;
  z-index: 5;
}

.card-flip-btn,
.card-flip-btn-back {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
  opacity: 0.7;
  height: 40px;
  width: 40px;
  position: absolute;
  top: 4px;
  right: 4px;
}

.card-flip-btn-back,
.card-flip-btn-back:hover {
  background-color: black;
}

.card-flip-btn:hover,
.card-flip-btn-back:hover {
  opacity: 0.9;
}

.card-flip-svg,
.card-flip-svg-back {
  border-radius: 100%;
  height: 20px;
  width: 20px;
}

.card-flip-svg-back {
  color: white;
}

.multi-level-card {
  display: flex;
  flex-direction: column;
}

.multi-level-card-controller {
  margin: 16px 0;
}

.monster-stat-card {
  box-sizing: border-box;
  position: relative;
  margin: 0 16px;
  max-width: 400px;
  overflow: hidden;
  width: 90%;
}

.monster-img-outer {
  background-image: repeating-linear-gradient(-55deg, #ddd, #ddd 5px, #ccc 5px, #ccc 10px);
  height: 100%;
  width: 100%;
}

.monster-img {
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  position: absolute;
  display: none;
  transition:
    transform 500ms,
    -webkit-transform 500ms;
}

.monster-img-active {
  display: block;
}

.card-index-btn {
  border-radius: 100%;
  opacity: 0.7;
  height: 40px;
  width: 40px;
  position: absolute;
  font-weight: 700;
  font-size: 18px;
  top: 10px;
  left: 10px;
}

/* --- CHARACTER DETAILS --- */
.character-details {
  align-items: stretch;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 16px;
  max-width: 720px;
  padding: 0 12px;
  width: 100%;
}

.character-details img {
  padding: 8px 0;
  width: 100%;
}

/* --- DROPDOWN --- */
.dropdown {
  position: relative;
  display: inline-block;
  flex: 0 0 auto;
}

.dropdown-anchor {
  align-items: center;
  appearance: none;
  background-color: var(--grey-light);
  border: 1px solid var(--primary);
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  justify-content: center;
  height: 24px;
  min-width: 50px;
  padding: 2px 8px;
  margin-right: 8px;
}

.dropdown-anchor:hover {
  background-color: white;
}

.dropdown select {
  background-image: url("https://raw.githubusercontent.com/cmlenius/gloomhaven-card-browser/images/images/icons/select.svg");
  background-position: right center;
  background-size: 20px 30px;
  background-repeat: no-repeat;
  padding-right: 18px;
}

.dropdownnav {
  height: 100%;
  z-index: 10;
}

.dropdownnav-anchor {
  align-items: center;
  border-radius: 4px;
  color: var(--grey);
  cursor: pointer;
  display: flex;
  height: 100%;
  padding: 0 12px;
}

.dropdownnav:hover .dropdownnav-anchor {
  color: white;
  text-decoration: underline;
  user-select: none;
  -webkit-user-select: none;
}

.dropdownnav-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.dropdownnav-hover:hover .dropdownnav-content {
  display: block;
}

.dropdownnav-option {
  color: black;
  cursor: pointer;
  display: flex;
  padding: 12px 12px;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
}

.dropdownnav-option:hover {
  background-color: var(--grey);
}

/* --- FILTERS --- */
.id-filter {
  background-color: var(--grey-light);
  border: 1px solid var(--primary);
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  height: 24px;
  margin: 0 8px;
  padding: 2px 8px;
  text-align: right;
  width: 65px;
}

.filters {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  padding: 0 12px;
}

.filters > *:not(:nth-child(1)) {
  margin-left: 8px;
}

.filter-icon {
  align-items: center;
  border-bottom: 2px solid transparent;
  cursor: pointer;
  display: flex;
  justify-content: center;
}

.filter-icon img {
  height: 24px;
  width: 24px;
}

.filter-icon svg {
  height: 20px;
  width: 20px;
}

.filter-icon-selected {
  border-bottom: 2px solid var(--primary);
}

/* --- MODAL --- */
.modal {
  display: none;
  position: fixed;
  z-index: 10;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.75);
}

.modal-content {
  margin: auto;
  position: relative;
  min-height: 120px;
  max-width: 720px;
  width: 80%;
}

.modal-content img {
  height: 100%;
  width: 100%;
}

.modal .close {
  align-items: center;
  background-color: black;
  border: 2px solid white;
  border-radius: 50%;
  cursor: pointer;
  display: flex;
  justify-content: center;
  height: 36px;
  opacity: 0.8;
  position: absolute;
  right: 12px;
  top: 12px;
  width: 36px;
}

.modal .close:hover,
.modal .close:focus {
  opacity: 1;
}
/* ... */

